syntax = "proto3";
option go_package = "./;rpc";

service Worker {
    rpc Map (MapInfo) returns (Result);
    rpc Reduce (ReduceInfo) returns (Result);
    // IMD = InterMeDiate
    rpc GetIMDData (IMDLoc) returns (KVs);
    /* rpc HealthCheck (IMDInfo) returns (UpdateResult); */
    rpc End(Empty) returns(Empty);
}

message Empty {

}

message Result {
    string uuid = 1;
    bool result = 2;
}

message MapInfo {
    repeated MapFileInfo files = 1;
}

message MapFileInfo {
	string FileName = 1;
	int64 From = 2;
	int64 To = 3; 
}

message ReduceInfo {
    repeated ReduceFileInfo files = 1;
}

message ReduceFileInfo {
    string ip = 1;
    string filename = 2;
}

message IMDLoc {
    string filename = 1;
}

message KVs {
    repeated KV kvs = 1;
}

message KV {
    string key = 1;
    string value = 2;
}

